@@ -159,9 +159,7 @@ values in base 10 (decimal), but some values are displayed in base 16
 displayed with a leading \fB"0x"\fP, for example: "0xff". This man
 page follows the same convention.
 
-.PP
 .SH OPTIONS
-.PP
 The options are grouped below into several categories.  \fBsmartctl\fP
 will execute the corresponding commands in the order: INFORMATION,
 ENABLE/DISABLE, DISPLAY DATA, RUN/ABORT TESTS.
@@ -369,9 +367,9 @@ It is possible to set RAID device name as /dev/bus/N, where N is a SCSI bus
 number.
 
 The following entry in /proc/devices must exist:
-.fi
+.br
 For PERC2/3/4 controllers: \fBmegadevN\fP
-.fi
+.br
 For PERC5/6 controllers: \fBmegaraid_sas_ioctlN\fP
 
 .I aacraid,H,L,ID
@@ -1941,7 +1939,7 @@ mounted partitions!\fP
 Aborts non-captive SMART Self Tests.  Note that this
 command will abort the Offline Immediate Test routine only if your
 disk has the "Abort Offline collection upon new command" capability.
-.PP
+
 .SH ATA, SCSI command sets and SAT
 In the past there has been a clear distinction between storage devices
 that used the ATA and SCSI command sets. This distinction was often
@@ -1985,7 +1983,7 @@ disks from a distant OS is a challenge for smartmontools. Another
 approach is running a tool like smartmontools inside the RAID 1 box (e.g.
 a Network Attached Storage (NAS) box) and fetching the logs via a
 browser. 
-.PP
+
 .SH EXAMPLES
 .nf
 .B smartctl \-a /dev/hda
@@ -2114,7 +2112,7 @@ device is restored.
 .fi
 Examine all SMART data for the first SCSI disk connected to a cciss
 RAID controller card.
-.PP
+
 .SH RETURN VALUES
 The return values of \fBsmartctl\fP are defined by a bitmask.  If all
 is well with the disk, the return value (exit status) of
@@ -2165,7 +2163,7 @@ This looks at only at bit 3 of the exit status
 (since 8=2^3).  The shell variable
 $smartstat will be nonzero if SMART status check returned "disk
 failing" and zero otherwise.
-
+.PP
 This shell script prints all status bits:
 .nf
 val=$?; mask=1
@@ -2196,7 +2194,6 @@ page is read. This means that each alert condition is reported only
 once by \fBsmartctl\fP for each initiator for each activation of the
 condition.
 
-.PP
 .SH AUTHORS
 \fBBruce Allen\fP
 .br
@@ -2208,22 +2205,35 @@ since 2009)
 \fBsmartmontools\-support@lists.sourceforge.net\fP
 
 The following have made large contributions to smartmontools:
-.nf
+.br
 \fBCasper Dik\fP (Solaris SCSI interface)
+.br
 \fBDouglas Gilbert\fP (SCSI subsystem)
+.br
 \fBGuido Guenther\fP (Autoconf/Automake packaging)
+.br
 \fBGeoffrey Keating\fP (Darwin ATA interface)
+.br
 \fBEduard Martinescu\fP (FreeBSD interface)
+.br
 \fBFr\['e]d\['e]ric L. W. Meunier\fP (Web site and Mailing list)
+.br
 \fBGabriele Pohl\fP (Web site and Wiki, conversion from CVS to SVN)
+.br
 \fBKeiji Sawada\fP (Solaris ATA interface)
+.br
 \fBManfred Schwarb\fP (Drive database)
+.br
 \fBSergey Svishchev\fP (NetBSD interface)
+.br
 \fBDavid Snyder and Sergey Svishchev\fP (OpenBSD interface)
+.br
 \fBPhil Williams\fP (User interface and drive database)
+.br
 \fBYuri Dario\fP (OS/2, eComStation interface)
+.br
 \fBShengfeng Zhou\fP (Linux/FreeBSD HighPoint RocketRAID interface)
-.fi
+.br
 Many other individuals have made smaller contributions and corrections.
 
 The first smartmontools code was derived from the smartsuite package,
@@ -2252,7 +2262,6 @@ volume of the \'AT Attachment with Packet Interface-7\' (ATA/ATAPI-7)
 specification Revision 4b.  This documents the SMART functionality which the
 \fBsmartmontools\fP utilities provide access to.
 
-.fi
 The functioning of SMART was originally defined by the SFF-8035i
 revision 2 and the SFF-8055i revision 1.4 specifications.  These are
 publications of the Small Form Factors (SFF) Committee.
